# cocap

./: Cargo.toml
src/: main.rs
src/lib/: mod.rs  program.rs
src/lib/cmd/: activate.rs  add.rs  clean.rs  mod.rs  remove.rs  stats.rs  version.rs
src/lib/core/: execute.rs  mod.rs  settings.rs
src/lib/hooks/: cfg.rs  entries.rs  mod.rs  shared.rs
src/lib/utils/: errors.rs  mod.rs
