[package]
name = "cocap-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cocap"
path = "src/lib/mod.rs"

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
figlet-rs = "0.1.3"
serde = {version= "1", features = ["derive"]}
serde_json = "1"
cmder="0.1.0"
git2 = "0.14.1"
