[package]
name = "cocap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cocap"
path = "src/lib/mod.rs"

[dependencies]
figlet-rs = "0.1.3"
serde = {version= "1", features = ["derive"]}
serde_json = "1"
cmder="0.6.0"
git2 = "0.14.1"
tabled = "0.7.0"
directories = "4.0.1"
walkdir = "2.3.2"
humantime = "2.1.0"
http = "0.2.7"
